name:                language-csharp
version:             0.1
synopsis:            C# source code analysis.
description:         C# source code analysis.
homepage:            http://github.com/jystic/language-csharp
license:             BSD3
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          Jacob Stanley <jacob@stanley.io>
category:            Language
build-type:          Simple
cabal-version:       >=1.6

extra-source-files:
  src/Language/CSharp/Lexer.x

executable language-csharp
  hs-source-dirs: src
  main-is: Main.hs
  build-tools: alex

  build-depends:
    derive == 2.4.*,
    QuickCheck == 2.4.*,

    array == 0.3.*,
    base == 4.*,
    bytestring == 0.9.*,
    --charsetdetect,
    directory,
    filepath,
    mtl == 2.0.*,
    parsec == 3.*,
    pretty,
    process,
    text

  other-modules:
    Language.CSharp.Lexer

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans
